selfhost/test/typechecker/if/error_empty_if_block.out
Error at %FILE_NAME%:1:9
Incomplete if-expression
  |  val a = if true { } else 456
             ^
The if-block must contain a value
