selfhost/test/typechecker/if/error_empty_if_block.abra
val a = if true { } else 456